style.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

* {
  scroll-behavior: smooth !important;
  list-style: none;
}

body {
  background-color: var(--primary-bg);
  margin: 0;
  padding: 0;
  transition: all .2s ease;
}

:root .light {
  --primary-bg: #ffffff;
  --secondary-bg: #f5f5f5;
  --primary-color: #000;
  --secondary-color: #fff;
  --blog: #ff2e63;
  --blog-secondary: #ca244d;
  --acsent-color: rgb(136, 136, 136);
  --navbar-shadow: rgba(0, 0, 0, 0.17);
  --navbar-shadow-invert: rgba(0, 0, 0, 0.17);
}

:root .dark {
  --primary-bg: #131516;
  --secondary-bg: #1b1d1e;
  --primary-color: #fff;
  --secondary-color: #000;
  --blog: #ff2e63;
  --blog-secondary: #ca244d;
  --acsent-color: rgb(189, 189, 189);
  --navbar-shadow: rgba(255, 255, 255, 0.17);
}

a {
  text-decoration: none;
}

.font-sans {
  font-family: "DM Sans", sans-serif;
}

.font-poppin {
  font-family: "Poppins", sans-serif;
}

.text-bold {
  font-weight: 700;
}

.text-white {
  color: var(--primary-color);
}

.text-yellowish {
  color: var(--text-yellowish);
}

.text-center {
  text-align: center;
}

.bg-dark {
  background-color: var(--main-bg);
}

.bg-dark-light {
  background-color: var(--dark-light-bg);
}

.d-flex {
  display: flex;
  flex-direction: row;
}

.margin-0 {
  margin: 0;
}

.line-div {
  margin: auto;
  width: 70%;
  opacity: 0.5;
  border-bottom: 1px dashed var(--course-border);
}

.nav-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  list-style: none;
  position: relative;
  padding: 12px 20px;
}

nav {
  background-color: transparent;
  backdrop-filter: blur(10px);
  z-index: 999;
  box-shadow: var(--navbar-shadow) 0px 5px 15px 0px;
}

.logo img {
  width: 180px;
}
.menu {
  display: flex;
}
.menu li {
  padding-left: 30px;
}
.menu li a {
  display: inline-block;
  text-decoration: none;
  transition: 0.15s ease-in-out;
  position: relative;
}

.menu li a::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0;
  height: 1px;
  background-color: var(--light-white);
  transition: 0.15s ease-in-out;
}
.menu li a:hover:after {
  width: 100%;
}
.open-menu,
.close-menu {
  position: absolute;
  cursor: pointer;
  font-size: 1.5rem;
  display: none;
}
.open-menu {
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
}
.close-menu {
  top: 20px;
  right: 20px;
}
#check {
  display: none;
}

.first-section h2 span {
  background: -webkit-linear-gradient(
    90deg,
    var(--blog-secondary) 0%,
    var(--blog) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  max-width: max-content;
}

.first-section a {
  background: rgb(190, 32, 72);
  background: linear-gradient(
    90deg,
    var(--blog-secondary) 30%,
    var(--blog) 100%
  );
  border-radius: 99px;
  box-sizing: border-box;
  cursor: pointer;
  color: #ffffff;
  margin-top: 25px;
  line-height: 24px;
  opacity: 1;
  outline: 0 solid transparent;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 0;
}

.headerImage {
  position: relative;
  animation: animate 2s alternate infinite;
}

.second-section {
  background: rgb(190, 32, 72);
  background: linear-gradient(90deg, var(--blog-secondary), var(--blog));
  box-sizing: border-box;
  position: relative;
  color: #fff;
  border-radius: 1.2rem;
}

.btn-design {
  background: rgb(190, 32, 72);
  background: linear-gradient(
    90deg,
    var(--blog-secondary) 30%,
    var(--blog) 100%
  );
  border-radius: 99px;
  box-sizing: border-box;
  cursor: pointer;

  line-height: 24px;
  opacity: 1;
  color: #ffffff;
  outline: 0 solid transparent;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 0;
}

.section-one-title {
  color: var(--primary-color);
}

.journey-list {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
}

.border-right {
  border-right: 1px solid black;
}

.third-section {
  padding: 5% 10%;
  color: var(--primary-color);
  background-color: var(--secondary-bg);
}

.third-section-title {
  margin-bottom: 4%;
}

.third-section-title span {
  color: var(--blog);
}

.card {
  transition: all 0.6s ease;
  margin: auto;
  padding: 1.25rem;
  border-radius: 0.5rem;
  border-width: 1px;
  background-color: var(--primary-bg);
  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
}

.card:hover {
  transform: scale(1.02);
}

.course-thumbnail {
  width: 100%;
  border-radius: 5px;
  margin-bottom: 1rem;
}

.card-level {
  display: inline;
  padding: 0.15rem 0.7rem;
  border-radius: 99px;
  color: #09c533;

  font-size: 0.7rem;
  border: 2px solid #09c533;
}

.course-title {
  margin: 20px 0px;
  font-size: 1.7rem;
  color: var(--primary-color);
}

.line {
  border-bottom: 2px solid var(--acsent-color);
  width: 70%;
  opacity: 0.2;
}

.course-price-section {
  display: flex;
  flex-direction: row;
}

.final-price {
  color: var(--blog);
  margin-left: 5px;
  font-size: 1.3rem;
}

.prev-price {
  margin-left: 15px;
  font-size: 1.3rem;
  text-decoration: line-through;
  color: var(--acsent-color);
}

.discount-percent {
  color: #fff;
  font-size: 1rem;
  border-radius: 0.375rem;
  padding: 6px 10px;
  margin-left: 15px;
  background-color: #09c533;
}

.instructor-title {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 10px;
}
/* ... */

